--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4,6 +4,22 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+/* Custom for pharaon */
+
+#logo {
+  height: 60px;
+  margin: 6px;
+}
+#text_logo {
+  font-weight: bold;
+  font-size: 25px;
+  color: #FFD700;
+}
+
+a:hover #text_logo {
+  text-decoration: underline;
+}
+
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
